<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="50dp"
    android:layout_height="wrap_content"
    android:layout_marginVertical="10dp"
    android:layout_marginHorizontal="2dp"
    app:cardElevation="0dp"
    app:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvWeatherTimeHourly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_time"
            android:layout_marginTop="5dp"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgWeatherHourly"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/text_hourly"
            tools:src="@drawable/outline_cloud"
            app:layout_constraintTop_toBottomOf="@id/tvWeatherTimeHourly"
            app:layout_constraintStart_toStartOf="@id/tvWeatherTimeHourly"
            app:layout_constraintEnd_toEndOf="@id/tvWeatherTimeHourly"/>

        <TextView
            android:id="@+id/tvWeatherDegreeHourly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/text_degree"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/imgWeatherHourly"
            app:layout_constraintStart_toStartOf="@id/imgWeatherHourly"
            app:layout_constraintEnd_toEndOf="@id/imgWeatherHourly"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>