<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    app:cardElevation="0dp"
    app:cardPreventCornerOverlap="true"
    app:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDayName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@tools:sample/cities"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:maxLines="1"
            android:ellipsize="end"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvWeatherMin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_degree"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toTopOf="@id/tvWeatherMax"
            app:layout_constraintEnd_toStartOf="@id/tvWeatherMax"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvWeatherMinDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_min"
            app:layout_constraintTop_toBottomOf="@id/tvWeatherMin"
            app:layout_constraintStart_toStartOf="@id/tvWeatherMin"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvWeatherMax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_degree"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvWeatherMaxDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_max"
            app:layout_constraintTop_toBottomOf="@id/tvWeatherMax"
            app:layout_constraintStart_toStartOf="@id/tvWeatherMax"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgWeatherDaily"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/outline_cloud"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tvWeatherMin"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>