<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.detail.fragment.DetailFragment">

    <include
        android:id="@+id/toolbarDetail"
        layout="@layout/toolbar_general"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbarDetail"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgWeatherIcon"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginHorizontal="16dp"
                android:src="@drawable/outline_cloud"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvWeatherDegree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                tools:text="@string/text_degree"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintTop_toBottomOf="@id/imgWeatherIcon"
                app:layout_constraintStart_toStartOf="@id/imgWeatherIcon"
                app:layout_constraintEnd_toEndOf="@id/imgWeatherIcon"/>

            <View
                android:id="@+id/viewBgHourly"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginVertical="16dp"
                android:background="@color/white_100"
                app:layout_constraintTop_toBottomOf="@id/tvWeatherDegree"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvHourly"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/text_hourly"
                app:layout_constraintTop_toTopOf="@id/viewBgHourly"
                app:layout_constraintBottom_toBottomOf="@id/viewBgHourly"
                app:layout_constraintStart_toStartOf="@id/viewBgHourly"
                app:layout_constraintEnd_toEndOf="@id/viewBgHourly"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvHourlyWeather"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:overScrollMode="never"
                android:scrollbars="none"
                android:nestedScrollingEnabled="false"
                tools:listitem="@layout/item_weather_hourly"
                tools:itemCount="1"
                app:layout_constraintTop_toBottomOf="@id/viewBgHourly"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <View
                android:id="@+id/viewBgDaily"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginVertical="16dp"
                android:background="@color/white_100"
                app:layout_constraintTop_toBottomOf="@id/rvHourlyWeather"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvDaily"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/text_this_weeks"
                app:layout_constraintTop_toTopOf="@id/viewBgDaily"
                app:layout_constraintBottom_toBottomOf="@id/viewBgDaily"
                app:layout_constraintStart_toStartOf="@id/viewBgDaily"
                app:layout_constraintEnd_toEndOf="@id/viewBgDaily"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvDailyWeather"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="12dp"
                android:overScrollMode="never"
                android:nestedScrollingEnabled="false"
                android:scrollbars="none"
                tools:listitem="@layout/item_weather_daily"
                app:layout_constraintTop_toBottomOf="@id/viewBgDaily"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>